# Robin

./: .gitignore  aaah.py  constants.py  package-lock.json
Command Execution/: .env  package-lock.json  package.json  tsconfig.json
Command Execution/src/: extension.ts
Command Intent/: BiLSTM.py  albert_cnn.ipynb  classical.ipynb  command_intent.py  command_intent_albert_cnn.ipynb  command_intent_notebook.ipynb  command_intent_trial2.ipynb  config.cfg  dataset_preparation.ipynb  entity_intents.json  final_intents.json  intents.json  ner.ipynb  ner_spacy.ipynb  rnn_lstm.ipynb  separate_intents.json  seperate_intents.json  temp.txt  training_data.spacy  utils.py
Command Intent/final_files/: data_augmenter.py  data_preparation.py  main.py  post_processor.py  run.py  train.py  utils.py
Command Intent/intent_detection/: rnn_bilstm.py
Command Intent/intent_detection_dataset/: final_intents.json  intents copy.json  intents.json  intents_pattern.json  temp.txt  variable_names.txt
Command Intent/models/: intent_detection_model.keras  ner_model_2.pth
Command Intent/ner_dataset/: activate_interactive.txt  activate_mouse.txt  array_operation.txt  assertion.txt  assignment_operation.txt  bitwise_operation.txt  casting.txt  class_declaration.txt  comment.txt  conditional_statement.txt  function_declaration.txt  git_operation.txt  i-o_operation.txt  ide_operation.txt  input.txt  interactive_commands.txt  io_operation.txt  iterative_statement.txt  libraries.txt  mathematical_operation.txt  membership_operation.txt  ner_dataset.csv  output.txt  variable_declaration.txt  varibale_declaration.txt  while_loop.txt
Command Intent/ner_model/: bilstm-crf.ipynb  bilstm_crf.py  constrained_crf.ipynb  dataset.txt  sent_vocab.json  separate_models.ipynb  tag_vocab.json  utils.py
Command Intent/ner_trials/: bilstm-crf.ipynb  cutom_ner.ipynb  lstm_crf_ner.ipynb  ner_pytorch.ipynb  ner_spacy.ipynb
Command Intent/test_data/: test_set_1.json
CommandExecution/: .env  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  temp.js
CommandExecution/src/: extension.js  (+2 more)
CommandIntent/: classical.ipynb  config.cfg  dataset_preparation.ipynb  fallback.ipynb  prepare_ner_dataset.py  requirements.txt  rnn_lstm.ipynb  spacy_ner.ipynb  utils.py
Desktop Application/: api.py  app.py  ast.json  ast_3.json  code_nodes.json  code_summarization.py  config.json  constant_nodes.json  constants.py  gui.py  hey_robin_2.tflite  import_nodes.json  requirements.txt  robin_responses.py  speech.py  summary.json  summary.txt  test.ipynb  wake_word.py
DesktopApplication/: akher_akher_test.py  api.py  app.py  ast.json  ast_2.json  ast_3.json  code_summarization.py  config.json  gui.py  narration.txt  package-lock.json  requirements.txt  robin_orchestrator.py  robin_responses.py  speech.py  stoppable_thread.py  subprocess_thread.py  summary.json  summary.txt  test.ipynb  test.py  wake_word.py  x.json
Interactive Mode/: AST.py  rule_based.ipynb
InteractiveMode/: ast_dump.txt  ast_json.json  ast_test.ipynb  my_ast  regenerated_code.py  rule_based.ipynb
Mouse Tracking/: CMakeLists.txt  eye.py  face2.ipynb  head.py  landmark.cpp  landmark.h  main.cpp  main.py  mouse_controlling.py  mouse_utilities.py  readme.md  temp.py
Mouse Tracking/face1/: model14.txt
Mouse Tracking/temp_cuda/: temp.cpp  vectorAdd.cu
Mouse Tracking/viola-jons/: .gitignore  AdaBoost.cpp  AdaBoost.h  FaceDetector.cpp  FaceDetector.h  const.h  data_prepaing.py  learner.cpp  learner.h  lines.bat  log.txt  main.cpp  model.txt  model2.txt  readme.md  run.bat  temp.cpp  tempCodeRunnerFile.cpp  utils.cpp  utils.h
Mouse Tracking/viola-jons-gpu/: AdaBoost.cu  CudaRuntime1.vcxproj  FaceDetector.cu  const.h  data_preparing2.py  learner.cu  learner.h  main.cu  readme.md  run.bat  utils.cu  utils.h
Mouse Tracking/viola-jons/face1/: meta.txt  model0.txt  model1.txt  model10.txt  model19.txt  model2.txt  model21.txt  model3.txt  model4.txt
Mouse Tracking/viola-jons/face1_test/: meta.txt  model3.txt
Mouse Tracking/viola-jons/face2/: model2.txt
Mouse Tracking/viola-jons/face7/: meta.txt  model0.txt  model6.txt
Mouse Tracking/viola-jons/models/: log18.txt  model18.txt
Mouse Tracking/viola-jons/models/FPR 0.72103-FNR 0.120763/: model2.txt
Mouse Tracking/viola-jons/models/face2/: model4.txt
Mouse Tracking/viola-jons/models/face_ac.56_FN.48/: meta.txt  model1.txt
MouseTracking/: .gitignore  head.py  keras_metadata.pb  landmark.cpp  landmark.h  landmark.py  landmark_detector.py  landmark_mediapipe.py  landmarks_cnn.cpp  landmarks_cnn.py  lines.bat  main.cpp  main.py  main_two_workers.cpp  mouse.txt  mouse_controlling.py  mouse_utilities.py  mousecontroller.cpp  mousecontroller.h  readme.md  run.bat  saved_model.pb
MouseTracking/landmark/: CMakeLists.txt  Untitled14.ipynb  cnn.ipynb  fingerprint.pb  keypoints_model.onnx  keypoints_model.pth  keypoints_model_traced.pth  keypoints_model_traced_mouth_not_eye.pth  landmark.py  landmark_torch.ipynb  main.cpp  main_onex.cpp  main_torch.cpp  model.tflite  old.ipynb  run.bat
MouseTracking/landmark/variables/: variables.data-00000-of-00001  variables.index
Speech Recognition/: Hey_Robin.tflite  hey_robin.py  speech_recognizer.py
SpeechRecognition/: Hey_Robin.onnx  hey_robin.ipynb  wakeword.py
(+343 files in other folders)
